# external_log4cplus

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  log4cplus.cmake  lookaside.txt
log4cplus_local/: CMakeLists.txt
resources/: remove_autoptr_112.patch
resources/log4cplus_cmake/: CMakeLists.txt
resources/log4cplus_cmake/android_armeabi_gcc/: defines.hxx
resources/log4cplus_cmake/macosx_amd64_clang/: defines.hxx
resources/log4cplus_cmake/windows_i386_msvc/: defines.hxx
resources/pkgconfig_system/: log4cplus.pc
test/: CMakeLists.txt  log4cplus_test.cpp  sleeper.cpp
util/: CMakeLists.txt
util/include/staticlib/: log4cplus_utils.hpp
util/include/staticlib/log4cplus/: utils.hpp
util/include/staticlib/log4cplus_utils/: create_appender.hpp
util/src/: create_appender.cpp  utils.cpp
